--- a/exito.html
+++ b/exito.html
@@ -2,10 +2,10 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/animation.css">
-    <link rel="stylesheet" href="css/paypal.css">
+    <link rel="stylesheet" href="Css/normalize.css">
+    <link rel="stylesheet" href="Css/estilos.css">
+    <link rel="stylesheet" href="Css/animation.css">
+    <link rel="stylesheet" href="Css/paypal.css">
     <title>--¡Exito!--</title>
   </head>
   <body>
